--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "LeroyMerlinShop",
+  "name": "LeroyMerlinPopup",
   "version": "0.0.0",
   "authors": [
     "SilentImp <thesilentimp@gmail.com>"
@@ -8,7 +8,6 @@
   "private": true,
   "dependencies": {
     "modernizr": "~2.8.3",
-    "jquery": "~2.1.4",
-    "slick.js": "~1.5.6"
+    "jquery": "~2.1.4"
   }
 }
