--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
   "private": true,
   "dependencies": {
     "modernizr": "~2.8.3",
-    "jquery": "~2.1.4",
-    "velocity": "~1.2.2"
+    "jquery": "1.9",
+    "velocity": "~1.2.2",
+    "html5shiv": "~3.7.3"
   }
 }
